QPID-3835: update the test preparer tool to generate content for a durable subscription without selector, use it to generate a new legacy store, add test to verify this content once updated and thus expose the issue through test failure
git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk/qpid@1243615 13f79535-47bb-0310-9956-ffa450edef68